Added some changes

--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Index Page</title>
+    <style>
+        img {
+            width: 100px;
+            border-radius: 5px;
+            float: left;
+            /* Push Image Left Side */
+            margin-right: 10px;
+            /* Add Margin Right */
+        }
+
+        .title {
+            font-size: 20px;
+            font-weight: bold;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <img src="images/Potato.jpg" alt="Potato With Text that says UR CUTE" />
+    <p class="title">Potato</p>
+    <p class="text">Potato is the Best!</p>
 </body>
+
 </html>
